@@ -23,8 +23,11 @@ POFILES = po/id.po po/pl.po po/ru.po
 EXTRA_DIST = po4a.cfg po/man-db-manpages.pot $(POFILES)
 
 if PO4A
+# Always generate output files even if poorly translated, since Automake's
+# generated rules will get upset otherwise.
 PO4A_ARGS = --variable srcdir=$(top_srcdir)/man \
-	    --variable builddir=$(top_builddir)/man
+	    --variable builddir=$(top_builddir)/man \
+	    --keep 0
 
 all-local:
 	$(PO4A) $(PO4A_ARGS) $(srcdir)/po4a.cfg
