@@ -1,3 +1,9 @@
+Sun Dec 28 00:17:45 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* man/po4a/Makefile.am (PO4A_ARGS): Always generate output files
+	  even if poorly translated, since Automake's generated rules will
+	  get upset otherwise.
+
 Sat Dec 27 23:47:19 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* man/po4a/Makefile.am (dist-hook): Update PO and POT files on 'make
